# smart_meter_zigbee

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prj.conf
boards/: xiao_ble.overlay
child_image/mcuboot/boards/: xiao_ble.conf  xiao_ble.overlay
inc/: sml_processing.h  sml_processing_obis_handler.h  zb_smz.h  zigbee.h
misc/: smz.js
src/: main.c  sml_processing.c  sml_processing_obis_handler.c  zigbee.c
